Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105058

PathView steals touch event of PinchArea delegate

    XMLWordPrintable

Details

    • All
    • 10800723ab (qt/qtdeclarative/dev) ae023ff2fc (qt/qtdeclarative/6.3) eb1af1d3da (qt/tqtc-qtdeclarative/6.2) db390f4a82 (qt/qtdeclarative/6.4) ae023ff2fc (qt/tqtc-qtdeclarative/6.3) db390f4a82 (qt/tqtc-qtdeclarative/6.4) 6332c2cc40 (qt/qtdeclarative/6.4)

    Description

      PathView steals touch event in certain circumstance when PinchArea is used for delegate of PathView.

       

      Please refer to attached test application.

      pincharea_test.tar.gz

       

      *. How to reproduce

      1. Start pinch action for sample image in PathView using two fingers.
      2. Remove second finger and hold the first finger.
      3. Attach the second finger again.
      4. Pinch does not work, PathView moves instead.

       

      *. Test patch to prevent touch event stealing

      Simply added setKeepMouseGrab(true) when pinchStarted and setKeepMouseGrab(false) when pinchFinished.

      Please refer to attached test patch.

      0001-setKeepMouseGrab-true-when-pinchStarted-setKeepMouse.patch

       

       

      Attachments

        1. pincharea_test3.zip
          27 kB
          Mitch Curtis
        2. pincharea_test2.tar.gz
          31 kB
          Seokha Ko
        3. pincharea_test.tar.gz
          27 kB
          Seokha Ko
        4. 0001-setKeepMouseGrab-true-when-pinchStarted-setKeepMouse.patch
          2 kB
          Seokha Ko

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              mitch_curtis Mitch Curtis
              seokhako Seokha Ko
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: