PinchArea: fix pinches being stolen when in PathView

Keep the mouse grab in addition to touch, as PathView
apparently doesn't deal with touch events yet.

Fixes: QTBUG-105058
Change-Id: Id94768aec847138cccdeccfa92e4bc72a19810fe
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 10800723ab6dacf1203986a6b0815dec45528ef4)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>